--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,6 @@ android {
     }
 }
 
-def mediaVersion = "1.1.1"
-
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -44,9 +42,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    api "androidx.media3:media3-exoplayer:$mediaVersion"
-    api "androidx.media3:media3-ui:$mediaVersion"
-    api "androidx.media3:media3-exoplayer-dash:$mediaVersion"
-    api "androidx.media3:media3-exoplayer-hls:$mediaVersion"
-    api "androidx.media3:media3-datasource-okhttp:$mediaVersion"
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.19.1'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.19.1'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.19.1'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.19.1'
+    implementation 'com.google.android.exoplayer:extension-okhttp:2.19.1'
 }
